--- a/package.json
+++ b/package.json
@@ -9,14 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.40.0",
+    "@react-three/fiber": "8.8",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
+    "@types/three": "^0.146.0",
+    "@usecsv/react": "^0.2.14",
+    "csv": "^6.2.2",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
     "next": "13.0.3",
+    "postprocessing": "^6.29.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "three": "0.145",
     "typescript": "4.8.4"
   }
 }
